minor CSS fix on smaller resolutions

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,10 +31,9 @@ body {
 
 
 .generator {
-
     margin:0 auto;
     margin-bottom:3em;
-    padding:1em;
+    padding:2em;
     height:70vh;
     width:80%;
     display:flex;
